--- a/docs/api-reference/lab-testing/register-order.mdx
+++ b/docs/api-reference/lab-testing/register-order.mdx
@@ -51,7 +51,7 @@ curl --request POST \
      --data '
 {
     "user_id":"63661a2b-2bb3-4125-bb1a-b590f64f057f",
-    "sample_id":"123123123"
+    "sample_id":"123123123",
     "patient_details":{
         "first_name": "John",
         "last_name": "Doe",
