--- a/docs/lab/workflow/order-registrable-testkit.mdx
+++ b/docs/lab/workflow/order-registrable-testkit.mdx
@@ -7,7 +7,7 @@ Under the [standard Testkit ordering flow](/api-reference/lab-testing/create-ord
 With Registrable Testkits, Vital offers a different option — Testkits not bound to any specific patient can be ordered to a specific household address. The patient registration process is deferred until an actual patient intends to use the Testkit.
 
 <Warning>
-  Note that this only applies to Testkits, not Walk-in Phlebotomy or At-home phlebotomy.
+  Note that this only applies to Testkits, not Walk-in Phlebotomy or At-home Phlebotomy.
 </Warning>
 
 This involves two steps:
