--- a/docs/api-reference/activity-timeseries/calories_basal.mdx
+++ b/docs/api-reference/activity-timeseries/calories_basal.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Steps"
-openapi: "GET /v2/timeseries/{user_id}/steps"
+title: "Calories Basal"
+openapi: "GET /v2/timeseries/{user_id}/calories_basal"
 ---
 
 <RequestExample>
 
 ```bash Bash
 curl --request GET \
-     --url {{BASE_URL}}/v2/timeseries/{user_id}/steps?start_date={{START_DATE}}&end_date={{END_DATE}} \
+     --url {{BASE_URL}}/v2/timeseries/{user_id}/calories_basal?start_date={{START_DATE}}&end_date={{END_DATE}} \
      --header 'Accept: application/json' \
      --header 'x-vital-api-key: <API_KEY>'
 ```
@@ -23,11 +23,11 @@ Not implemented yet.
 ```json Example
 [
   {
-    "id": null,
     "timestamp": "2022-04-20T13:02:01.123771+00:00",
+    "timezone_offset": 3600,
     "value": 123,
     "type": "automatic",
-    "unit": "count"
+    "unit": "kcal"
   }
 ]
 ```
