Update Mintlify + Use Node 18

--- a/docs/api-reference/activity-timeseries/distance.mdx
+++ b/docs/api-reference/activity-timeseries/distance.mdx
@@ -23,8 +23,8 @@ Not implemented yet.
 ```json Example
 [
   {
-    "id": null,
     "timestamp": "2022-04-20T13:02:01.123771+00:00",
+    "timezone_offset": 3600,
     "value": 123,
     "type": "automatic",
     "unit": "m"
