--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -6,27 +6,30 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ### Cloud Based Providers
 
-| Provider                                             | Slug              | Description                                                   |
-| ---------------------------------------------------- | ----------------- | ------------------------------------------------------------- |
-| [Beurer](https://www.beurer.com/web/gb/)             | `beurer_api`      | Beurer Blood Pressure monitors                                |
-| [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | Dexcom CGM Glucose monitors                                   |
-| [Dexcom (G6 And Older)](https://www.dexcom.com)      | `dexcom`          | Dexcom CGM Glucose monitors                                   |
-| [8Sleep](https://www.eightsleep.com)                 | `eight_sleep`     | Smart Mattress                                                |
-| [Freestyle](https://www.freestylelibre.co.uk/libre/) | `freestyle_libre` | Abbott CGM Glucose monitor                                    |
-| [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               |
-| [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 |
-| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               |
-| [Hammerhead](https://www.hammerhead.io)              | `hammerhead`      | Cycling computers                                             |
-| [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches |
-| [MyFitnessPal](https://www.myfitnesspal.com)         | `my_fitness_pal`  | Nutrition data                                                |
-| [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     |
-| [Peloton](https://www.onepeloton.com)                | `peloton`         | Popular Indoor Exercise bike                                  |
-| [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                |
-| [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              |
-| [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             |
-| [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                |
-| [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   |
-| [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   |
+Note that some Oauth providers are unavailable unless you can Bring Your Own OAuth (BYOO) — you will have to apply directly
+to the provider for an OAuth application, and provide Vital your assigned credentials once the application is accepted.
+
+| Provider                                             | Slug              | Description                                                   | Availability                         |
+| ---------------------------------------------------- | ----------------- | ------------------------------------------------------------- | ------------------------------------ |
+| [Beurer](https://www.beurer.com/web/gb/)             | `beurer_api`      | Beurer Blood Pressure monitors                                | Password authentication              |
+| [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | Dexcom CGM Glucose monitors                                   | [BYOO only](/wearables/providers/guides/dexcom_v3) |
+| [Dexcom (G6 And Older)](https://www.dexcom.com)      | `dexcom`          | Dexcom CGM Glucose monitors                                   | Password authentication              |
+| [8Sleep](https://www.eightsleep.com)                 | `eight_sleep`     | Smart Mattress                                                | Password authentication              |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/) | `freestyle_libre` | Abbott CGM Glucose monitor                                    | [LibreView practice connection](/wearables/providers/guides/freestyle) |
+| [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
+| [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 | Vital branded OAuth, or BYOO         |
+| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
+| [Hammerhead](https://www.hammerhead.io)              | `hammerhead`      | Cycling computers                                             | Vital branded    |
+| [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches | Vital branded OAuth, or BYOO         |
+| [MyFitnessPal](https://www.myfitnesspal.com)         | `my_fitness_pal`  | Nutrition data                                                | [MyFitnessPal Diary Sharing Key](/wearables/providers/guides/my_fitness_pal) |
+| [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     | Vital branded OAuth, or BYOO         |
+| [Peloton](https://www.onepeloton.com)                | `peloton`         | Popular Indoor Exercise bike                                  | Password authentication              |
+| [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                | Password authentication              |
+| [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              | Vital branded OAuth, or BYOO         |
+| [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             | Vital branded OAuth, or BYOO         |
+| [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                | Password authentication              |
+| [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   | Vital branded OAuth, or BYOO         |
+| [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication              |
 
 ### SDK Based Providers
 
