Nits + Use callout

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -6,8 +6,10 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ### Cloud Based Providers
 
-Note that some Oauth providers are unavailable unless you can Bring Your Own OAuth (BYOO) — you will have to apply directly
+<Note>
+Some Oauth providers are unavailable unless you can <b>Bring Your Own OAuth (BYOO)</b> — you will have to apply directly
 to the provider for an OAuth application, and provide Vital your assigned credentials once the application is accepted.
+</Note>
 
 | Provider                                             | Slug              | Description                                                   | Availability                         |
 | ---------------------------------------------------- | ----------------- | ------------------------------------------------------------- | ------------------------------------ |
@@ -19,7 +21,7 @@ to the provider for an OAuth application, and provide Vital your assigned creden
 | [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
 | [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 | Vital branded OAuth, or BYOO         |
 | [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
-| [Hammerhead](https://www.hammerhead.io)              | `hammerhead`      | Cycling computers                                             | Vital branded    |
+| [Hammerhead](https://www.hammerhead.io)              | `hammerhead`      | Cycling computers                                             | Password authentication              |
 | [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches | Vital branded OAuth, or BYOO         |
 | [MyFitnessPal](https://www.myfitnesspal.com)         | `my_fitness_pal`  | Nutrition data                                                | [MyFitnessPal Diary Sharing Key](/wearables/providers/guides/my_fitness_pal) |
 | [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     | Vital branded OAuth, or BYOO         |
