Use BYOO consistently + Link it everywhere

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -7,30 +7,30 @@ We currently Support over 300+ devices, a full list can be seen below.
 ### Cloud Based Providers
 
 <Note>
-Some Oauth providers are unavailable unless you can <b>Bring Your Own OAuth (BYOO)</b> — you will have to apply directly
+Some Oauth providers are unavailable unless you can <b>[Bring Your Own OAuth (BYOO)](/wearables/connecting-providers/bring_your_own_oauth)</b> — you will have to apply directly
 to the provider for an OAuth application, and provide Vital your assigned credentials once the application is accepted.
 </Note>
 
 | Provider                                             | Slug              | Description                                                   | Availability                         |
 | ---------------------------------------------------- | ----------------- | ------------------------------------------------------------- | ------------------------------------ |
 | [Beurer](https://www.beurer.com/web/gb/)             | `beurer_api`      | Beurer Blood Pressure monitors                                | Password authentication              |
-| [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | Dexcom CGM Glucose monitors                                   | [BYOO only](/wearables/providers/guides/dexcom_v3) |
+| [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | Dexcom CGM Glucose monitors                                   | [BYOO only](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Dexcom (G6 And Older)](https://www.dexcom.com)      | `dexcom`          | Dexcom CGM Glucose monitors                                   | Password authentication              |
 | [8Sleep](https://www.eightsleep.com)                 | `eight_sleep`     | Smart Mattress                                                | Password authentication              |
 | [Freestyle](https://www.freestylelibre.co.uk/libre/) | `freestyle_libre` | Abbott CGM Glucose monitor                                    | [LibreView practice connection](/wearables/providers/guides/freestyle) |
-| [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
-| [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 | Vital branded OAuth, or BYOO         |
-| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               | Vital branded OAuth, or BYOO         |
+| [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
+| [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
+| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Hammerhead](https://www.hammerhead.io)              | `hammerhead`      | Cycling computers                                             | Password authentication              |
-| [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches | Vital branded OAuth, or BYOO         |
+| [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches | [BYOO only](/wearables/connecting-providers/bring_your_own_oauth) |
 | [MyFitnessPal](https://www.myfitnesspal.com)         | `my_fitness_pal`  | Nutrition data                                                | [MyFitnessPal Diary Sharing Key](/wearables/providers/guides/my_fitness_pal) |
-| [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     | Vital branded OAuth, or BYOO         |
+| [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Peloton](https://www.onepeloton.com)                | `peloton`         | Popular Indoor Exercise bike                                  | Password authentication              |
 | [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                | Password authentication              |
-| [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              | Vital branded OAuth, or BYOO         |
-| [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             | Vital branded OAuth, or BYOO         |
+| [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
+| [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                | Password authentication              |
-| [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   | Vital branded OAuth, or BYOO         |
+| [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication              |
 
 ### SDK Based Providers
