--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -511,7 +511,7 @@ await VitalClient.shared.user.deregisterProvider(provider: .appleHealthKit)
 
 ### 5. Miscellaneous Information
 
-#### i) SDK configuration flow
+#### i) Apple HealthKit SDK configuration flow
 
 Vital's iOS SDK allows you to configure it in any order you wish. There are however two things to keep in mind:
 
