--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -45,13 +45,18 @@ client.linkProvider(user, 'strava','vitalexample: //callback');
 ```
 
 <Tip>
-  Note: To return back to the app after successful linking, setup an intent
-  filter in `AndroidManifest.xml` and custom URL scheme in `info.plist`. Note 2:
-  Refer to [documentation](/wearables/providers/Introduction) for all supported
-  data providers.
+  Independently of the plarform you are using, you should read both the [Native
+  iOS Guide](/wearables/sdks/ios) and the [Apple HealthKit Guide](/wearables/guides/apple_health_kit), since the docs apply to all platforms.
 </Tip>
 
 ## 3. Vital Health
+
+<Tip>
+  Independently of the plarform you are using, you should read both the [Native
+  iOS Guide](/wearables/sdks/ios) and the [Apple HealthKit
+  Guide](/wearables/guides/apple_health_kit), since the docs apply to all
+  platforms.
+</Tip>
 
 ### 1. Getting Started
 
