--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -47,10 +47,9 @@ client.linkProvider(user, 'strava','vitalexample: //callback');
 ## 3. Vital Health
 
 <Tip>
-  Independently of the plarform you are using, you should read both the [Native
-  iOS Guide](/wearables/sdks/ios) and the [Apple HealthKit
-  Guide](/wearables/guides/apple_health_kit), since the docs apply to all
-  platforms.
+  We recommend reading both the [Native iOS Guide](/wearables/sdks/ios) and the
+  [Apple HealthKit Guide](/wearables/guides/apple_health_kit), since those docs
+  apply to all platforms.
 </Tip>
 
 ### 1. Getting Started
