--- a/docs/wearables/sdks/react_native.mdx
+++ b/docs/wearables/sdks/react_native.mdx
@@ -77,10 +77,9 @@ The Core SDK is now ready to use. You can now set up the HealthKit SDK and Devic
 ## 5. Vital Health
 
 <Tip>
-  Independently of the plarform you are using, you should read both the [Native
-  iOS Guide](/wearables/sdks/ios) and the [Apple HealthKit
-  Guide](/wearables/guides/apple_health_kit), since the docs apply to all
-  platforms.
+  We recommend reading both the [Native iOS Guide](/wearables/sdks/ios) and the
+  [Apple HealthKit Guide](/wearables/guides/apple_health_kit), since those docs
+  apply to all platforms.
 </Tip>
 
 ### 1. iOS
