--- a/docs/wearables/guides/apple_health_kit.mdx
+++ b/docs/wearables/guides/apple_health_kit.mdx
@@ -5,8 +5,8 @@ title: "Apple HealthKit"
 Apple HealthKit is an SDK only provider. This means that you access your user's data by using either our [Native iOS](/wearables/sdks/ios), [Flutter](/wearables/sdks/flutter) or [React Native](/wearables/sdks/react_native) SDK. We have a guide for each of these SDKs that you should follow for more detail.
 
 <Tip>
-  Independently of the plarform you are using, you should read the [Native iOS
-  Guide](/wearables/sdks/ios), since the docs apply to all platforms.
+  We recommend reading the [Native iOS Guide](/wearables/sdks/ios), since the
+  docs apply to all platforms.
 </Tip>
 
 ### SDK Setup Sequence
@@ -16,7 +16,7 @@ The number one issue we have identified when integrating with Apple HealthKit, i
 1. You need to call `VitalClient.configure`, `VitalClient.setUserId` and `VitalHealthKitClient.configure` in order for data to be pushed to Vital.
 2. You need to call `VitalHealthKitClient.configure` at `application(_:didFinishLaunchingWithOptions:)`, in order for background delivery to work properly.
 
-The main challenge of step number 2, is that for it to work, the first two calls mentioned on step number 1 must happen. For most applications this is not possible. For example, imagine that you only enable Apple HealthKit if the user has logged in. Likely this means that at `didFinishLaunchingWithOptions` you don't know if the user is logged in or not. Or for example you are doing A/B testing and only a percentage of your userbase would have access to Apple HealthKit. For these reasons, we advise on calling `VitalHealthKitClient.automaticConfiguration()`. This method makes sure that if the SDK has been setup at least once, it will automatically set everything for you.
+The main challenge of step number 2, is that for it to work, the first two calls mentioned on step number 1 must happen. For most applications this is not possible. For example, imagine that you only enable Apple HealthKit if a user has logged in. For many apps, at `didFinishLaunchingWithOptions` they don't know yet if the user is logged in or not. Or, for example, you are doing A/B testing and only a percentage of your userbase would have access to Apple HealthKit. For these reasons, we advise on calling `VitalHealthKitClient.automaticConfiguration()`. This method makes sure that if the SDK has been setup at least once, it will automatically set everything for you.
 
 Your `AppDelegate` should then look like this:
 
@@ -47,10 +47,10 @@ The same situation applies for both Flutter and React Native. For the latter:
 }
 ```
 
-From our experience with how the SDK is used, what tends to happen is a flow that allows the end-user to connect with Apple HealthKit. So a screen would ask the user if they would like to sync their Apple HealthKit. If the user accepts, you would then call:
+From our experience with how the SDK is used, what tends to exist is a flow that allows the end-user to connect with Apple HealthKit. Usually a screen would ask the user if they would like to sync with Apple HealthKit. If the user accepts, you would then call:
 
 1. `VitalClient.configure`
 2. `VitalClient.setUserId`
 3. `VitalHealthKitClient.configure`
 
-These three calls alongside `VitalHealthKitClient.automaticConfiguration` at `didFinishLaunchingWithOptions` tends to be enough to remove most issues we have seen when integrating with Apple HealthKit.
+These three calls alongside `VitalHealthKitClient.automaticConfiguration` at `didFinishLaunchingWithOptions` tends to be enough to remove most issues we have seen when integrating with Apple HealthKit. We use this approach on all our examples and our [Vital App](/wearables/vital-app/introduction).
