--- a/docs/wearables/guides/apple_health_kit.mdx
+++ b/docs/wearables/guides/apple_health_kit.mdx
@@ -25,8 +25,10 @@ import VitalHealthKit
 
 class AppDelegate: NSObject, UIApplicationDelegate {
   func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey : Any]? = nil) -> Bool {
+
     VitalHealthKitClient.automaticConfiguration()
-    /// your custom code
+    /// your code
+
     return true
   }
 }
@@ -41,8 +43,8 @@ The same situation applies for both Flutter and React Native. For the latter:
 - (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
 
   [VitalHealthKitConfiguration automaticConfiguration];
+  /// your code
 
-   // your code
   return YES;
 }
 ```
