--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -11,9 +11,9 @@ We currently Support over 300+ devices, a full list can be seen below.
   <b>
     [Bring Your Own OAuth
     (BYOO)](/wearables/connecting-providers/bring_your_own_oauth)
-  </b>{" "}
-  — you will have to apply directly to the provider for an OAuth application,
-  and provide Vital your assigned credentials once the application is accepted.
+  </b>
+  — you will have to apply directly to the provider for an OAuth application, and
+  provide Vital your assigned credentials once the application is accepted.
 </Note>
 
 | Provider                                             | Slug              | Description                                                   | Availability                                                                         |
