[VIT-4327] Update docs with polar

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -46,6 +46,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | Provider                                                               | Slug             | Description                                |
 | ---------------------------------------------------------------------- | ---------------- | ------------------------------------------ |
 | [Android Health Connect](https://developer.android.com/health-connect) | `health_connect` | Health and fitness data on Android devices |
+| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)    | `polar`          | Finnish sports tech pioneer                |
 
 **Planned**: On our roadmap
 
@@ -55,7 +56,6 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Cronometer](https://www.cronometer.com)        | `cronometer` | Nutrition data            | Enquire |
 | [Suunto](https://www.suunto.com)                | `suunto`     | Fitness Watch             | Planned |
 | [iGlucose](https://smartmeterrpm.com/iglucose/) | `iglucose`   | Glucose Strips            | Planned |
-| [Polar](https://www.polar.com)                  | `polar`      | Activity Watch            | Planned |
 | [KetoMojo](https://keto-mojo.com)               | TBD          | Glucose, Ketones and more | Planned |
 
 ## Full Device Support List
@@ -135,6 +135,7 @@ When a new provider is connected to a user, Vital retrieves the historical data 
 | [Dexcom](https://www.dexcom.com)                                             | `30`          |
 | [Dexcom (G6 And Older)](https://www.dexcom.com)                              | `1`           |
 | [MyFitnessPal](https://www.myfitnesspal.com)                                 | `14`          |
+| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | `0`           |
 
 <Info>
 
