feat: Add critical result documentation

--- a/docs/api-reference/results/get-results-metadata.mdx
+++ b/docs/api-reference/results/get-results-metadata.mdx
@@ -51,7 +51,9 @@ const data = await client.LabTests.Results.getResultsMetadata("<order_id>");
   "date_reported": "2020-01-01",
   "date_collected": "2022-02-02",
   "specimen_number": "123131",
-  "date_received": "2022-01-01"
+  "date_received": "2022-01-01",
+  "status": "final",
+  "interpretation": "normal"
 }
 ```
 
